{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 35,
  "lineage": "8b1d81c5-b401-267d-d906-749f626c46fb",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d389283c17023e7",
            "domain": "vpc",
            "id": "eipalloc-02d389283c17023e7",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-187-50.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.187.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dhkim-eks-vpc-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "dhkim-eks-vpc-ap-northeast-2a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:433496216906:internet-gateway/igw-02aae4129f7a87c3f",
            "id": "igw-02aae4129f7a87c3f",
            "owner_id": "433496216906",
            "tags": {
              "Name": "dhkim-eks-vpc"
            },
            "tags_all": {
              "Name": "dhkim-eks-vpc"
            },
            "vpc_id": "vpc-06fd43c02eb85ea5b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d389283c17023e7",
            "connectivity_type": "public",
            "id": "nat-096294a9455f05f8d",
            "network_interface_id": "eni-0d8c05423255286ff",
            "private_ip": "10.244.1.94",
            "public_ip": "13.209.187.50",
            "subnet_id": "subnet-0cc970674205058bd",
            "tags": {
              "Name": "dhkim-eks-vpc-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "dhkim-eks-vpc-ap-northeast-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06a60f4ece48049b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-096294a9455f05f8d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06a60f4ece48049b4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02aae4129f7a87c3f",
            "id": "r-rtb-0766ac37d0efbc3aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0766ac37d0efbc3aa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:433496216906:route-table/rtb-06a60f4ece48049b4",
            "id": "rtb-06a60f4ece48049b4",
            "owner_id": "433496216906",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dhkim-eks-vpc-private"
            },
            "tags_all": {
              "Name": "dhkim-eks-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fd43c02eb85ea5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:433496216906:route-table/rtb-0766ac37d0efbc3aa",
            "id": "rtb-0766ac37d0efbc3aa",
            "owner_id": "433496216906",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dhkim-eks-vpc-public"
            },
            "tags_all": {
              "Name": "dhkim-eks-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fd43c02eb85ea5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b16394e0f388158",
            "route_table_id": "rtb-06a60f4ece48049b4",
            "subnet_id": "subnet-09b709a11284b444f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4f22d14c74a3b5c",
            "route_table_id": "rtb-06a60f4ece48049b4",
            "subnet_id": "subnet-094f2557225b8155d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4c7bc25730b5711",
            "route_table_id": "rtb-0766ac37d0efbc3aa",
            "subnet_id": "subnet-0cc970674205058bd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06976ca1efd144e52",
            "route_table_id": "rtb-0766ac37d0efbc3aa",
            "subnet_id": "subnet-054541c425cf2968a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:433496216906:subnet/subnet-09b709a11284b444f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.244.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b709a11284b444f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433496216906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dhkim-eks-vpc-private-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "dhkim-eks-vpc-private-ap-northeast-2a"
            },
            "vpc_id": "vpc-06fd43c02eb85ea5b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:433496216906:subnet/subnet-094f2557225b8155d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.244.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094f2557225b8155d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433496216906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dhkim-eks-vpc-private-ap-northeast-2c"
            },
            "tags_all": {
              "Name": "dhkim-eks-vpc-private-ap-northeast-2c"
            },
            "vpc_id": "vpc-06fd43c02eb85ea5b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:433496216906:subnet/subnet-0cc970674205058bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.244.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc970674205058bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "433496216906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dhkim-eks-vpc-public-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "dhkim-eks-vpc-public-ap-northeast-2a"
            },
            "vpc_id": "vpc-06fd43c02eb85ea5b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:433496216906:subnet/subnet-054541c425cf2968a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.244.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054541c425cf2968a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "433496216906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dhkim-eks-vpc-public-ap-northeast-2c"
            },
            "tags_all": {
              "Name": "dhkim-eks-vpc-public-ap-northeast-2c"
            },
            "vpc_id": "vpc-06fd43c02eb85ea5b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:433496216906:vpc/vpc-06fd43c02eb85ea5b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.244.0.0/16",
            "default_network_acl_id": "acl-09567b15e714ad1be",
            "default_route_table_id": "rtb-078281d2fb61b7c4b",
            "default_security_group_id": "sg-0fc34dc59b94b5464",
            "dhcp_options_id": "dopt-01adcba3b0616bd3b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06fd43c02eb85ea5b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078281d2fb61b7c4b",
            "owner_id": "433496216906",
            "tags": {
              "Name": "dhkim-eks-vpc"
            },
            "tags_all": {
              "Name": "dhkim-eks-vpc"
            }
          }
        }
      ]
    }
  ]
}